@@ -4,4 +4,4 @@
 /* Test that -Wmissing-include-dirs issues a warning when a specified
    directory does not exist.  Source Ben Elliston, 2004-05-13.  */
 
-/* { dg-warning "No such file or directory" "-Wmissing-include-dirs" { target *-*-* } 0 } */
+/* { dg-warning "No such file or directory.*Wmissing-include-dirs" "-Wmissing-include-dirs" { target *-*-* } 0 } */
