@@ -1,5 +1,11 @@
 2014-08-20  Manuel López-Ibáñez  <manu@gcc.gnu.org>
 
+	PR preprocessor/51303
+	* c-common.c (struct reason_option_codes_t option_codes):
+	Add CPP_W_MISSING_INCLUDE_DIRS. Sort alphabetically.
+
+2014-08-20  Manuel López-Ibáñez  <manu@gcc.gnu.org>
+
 	PR c/60975
 	PR c/53063
 	* c.opt (Wvariadic-macros): Use CPP and LangEnabledBy.
