@@ -1,5 +1,10 @@
 2014-08-20  Manuel López-Ibáñez  <manu@gcc.gnu.org>
 
+	PR preprocessor/51303
+	* gcc.dg/cpp/Wmissingdirs.c: Test for the warning option.
+
+2014-08-20  Manuel López-Ibáñez  <manu@gcc.gnu.org>
+
 	PR c/60975
 	PR c/53063
 	* gcc.dg/cpp/Wvariadic-1p.c: New test.
